# PKU-Get

./: .gitignore  BUILD.md  PKU-Get.spec  README.md  build.py  gui.py  pyproject.toml
.github/workflows/: README.md  build.yml
gui/: package-lock.json  package.json
gui/src/: App.jsx  NotificationImage.jsx  i18n.js  index.css
pku_downloader/: config.py  course_config.py  replay.py
pku_downloader/auth/: __init__.py
pku_downloader/browser/: __init__.py
pku_downloader/download/: __init__.py
