[project]
name = "pku-get"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "pywebview>=4.0.0",
    "requests>=2.31.0",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
pku-get = "gui:main"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]
